# Chatbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/apps/chat/: chain.py  exemple.txt  exemple_full.txt  forms.py  prompts.py  urls.py  views.py
src/apps/chat/static/chat/js/: chat.js  talk.js
src/apps/chat/templates/chat/: chat.html  summarize.html  talk.html  videotalk.html
src/apps/home/: views.py
src/apps/home/migrations/: 0001_initial.py
src/apps/home/templates/home/: index.html
src/apps/home/templatetags/: template_tags.py
src/apps/tuning/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/tuning/fixtures/: tuning.json
src/apps/tuning/migrations/: 0001_initial.py  0002_alter_prompt_target.py
src/apps/tuning/static/tuning/js/: prompt.js
src/apps/tuning/templates/tuning/: model_tuning.html  prompt_tuning.html
src/apps/user/: forms.py
src/apps/user/migrations/: 0001_initial.py
src/apps/user/templates/user/: connexion.html
src/src/: urls.py
src/src/settings/: __init__.py  base.py  develop.example.py  production.example.py
src/templates/: base.html
src/theme/static_src/: package.json
src/theme/static_src/src/: styles.css
