[project]
name = "src"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Christophe Vellen",email = "christophe.vellen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "django (==5.2)",
    "pymysql (>=1.1.2,<2.0.0)",
    "cryptography (>=46.0.2,<47.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django-tailwind[reload] (>=4.2.0,<5.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.35,<0.4.0)",
    "langgraph (>=0.6.10,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
